# PyWeb20_HW_8

./: .gitignore  authors.json  consumer_email.py  consumer_sms.py  main.py  models.py  produser.py  pyproject.toml  quotes.json  seed.py
